adding final test questions evidence

--- a/Semana3_Python for Data Science.ipynb
+++ b/Semana3_Python for Data Science.ipynb
@@ -210,6 +210,199 @@
     "\n",
     "a+10"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3', '4']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " '1,2,3,4'.split(',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A', 'B', 'C'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V={'A','B', 'C'}\n",
+    "V.add('C')\n",
+    "V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Go \n",
+      "Mike\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=\"Go\"\n",
+    "\n",
+    "if(x==\"Go\"):\n",
+    "\n",
+    "    print('Go ')\n",
+    "\n",
+    "else:\n",
+    "\n",
+    "    print('Stop')\n",
+    "\n",
+    "print('Mike')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(3):\n",
+    "\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(3):\n",
+    "\n",
+    "    print(n+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "22\n",
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "A=['1','2','3']\n",
+    "\n",
+    "for a in A:\n",
+    "\n",
+    "    print(2*a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def Add(x,y):\n",
+    "\n",
+    "    z=y+x\n",
+    "\n",
+    "    return(y)\n",
+    "Add('1','1')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x= 2 y= 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Points(object):\n",
+    "\n",
+    "    def __init__(self,x,y):\n",
+    "\n",
+    "        self.x=x\n",
+    "\n",
+    "        self.y=y\n",
+    "\n",
+    "    def print_point(self):\n",
+    "\n",
+    "        print('x=',self.x,'y=',self.y)\n",
+    "\n",
+    "p2=Points(1,2)\n",
+    "\n",
+    "p2.x=2\n",
+    "\n",
+    "p2.print_point()      "
+   ]
   }
  ],
  "metadata": {
