--- a/semana 4/DA0101EN-Review-Introduction.jupyterlite.ipynb
+++ b/semana 4/DA0101EN-Review-Introduction.jupyterlite.ipynb
@@ -65,31 +65,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'piplite'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[1;32mc:\\Users\\genar\\OneDrive\\maestria\\ciencia de datos\\actividades-de-aprendizaje-A01150931\\DA0101EN-Review-Introduction.jupyterlite.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/genar/OneDrive/maestria/ciencia%20de%20datos/actividades-de-aprendizaje-A01150931/DA0101EN-Review-Introduction.jupyterlite.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#you are running the lab in your  browser, so we will install the libraries using ``piplite``\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/genar/OneDrive/maestria/ciencia%20de%20datos/actividades-de-aprendizaje-A01150931/DA0101EN-Review-Introduction.jupyterlite.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpiplite\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/genar/OneDrive/maestria/ciencia%20de%20datos/actividades-de-aprendizaje-A01150931/DA0101EN-Review-Introduction.jupyterlite.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmicropip\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/genar/OneDrive/maestria/ciencia%20de%20datos/actividades-de-aprendizaje-A01150931/DA0101EN-Review-Introduction.jupyterlite.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mawait\u001b[39;00m piplite\u001b[39m.\u001b[39minstall([\u001b[39m'\u001b[39m\u001b[39mpandas\u001b[39m\u001b[39m'\u001b[39m])\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'piplite'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#you are running the lab in your  browser, so we will install the libraries using ``piplite``\n",
-        "import piplite\n",
-        "import micropip\n",
-        "await piplite.install(['pandas'])\n",
-        "await piplite.install(['matplotlib'])\n",
-        "await piplite.install(['scipy'])\n",
-        "await piplite.install(['seaborn'])\n",
-        "await micropip.install(['ipywidgets'],keep_going=True)\n",
-        "await micropip.install(['tqdm'],keep_going=True)"
+        "#import piplite\n",
+        "#import micropip\n",
+        "#await piplite.install(['pandas'])\n",
+        "#await piplite.install(['matplotlib'])\n",
+        "#await piplite.install(['scipy'])\n",
+        "#await piplite.install(['seaborn'])\n",
+        "#await micropip.install(['ipywidgets'],keep_going=True)\n",
+        "#await micropip.install(['tqdm'],keep_going=True)"
       ]
     },
     {
@@ -101,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -112,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -130,25 +118,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 23,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'pyodide'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[1;32mc:\\Users\\genar\\OneDrive\\maestria\\ciencia de datos\\actividades-de-aprendizaje-A01150931\\DA0101EN-Review-Introduction.jupyterlite.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/genar/OneDrive/maestria/ciencia%20de%20datos/actividades-de-aprendizaje-A01150931/DA0101EN-Review-Introduction.jupyterlite.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#This function will download the dataset into your browser \u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/genar/OneDrive/maestria/ciencia%20de%20datos/actividades-de-aprendizaje-A01150931/DA0101EN-Review-Introduction.jupyterlite.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyodide\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mhttp\u001b[39;00m \u001b[39mimport\u001b[39;00m pyfetch\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/genar/OneDrive/maestria/ciencia%20de%20datos/actividades-de-aprendizaje-A01150931/DA0101EN-Review-Introduction.jupyterlite.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39masync\u001b[39;00m \u001b[39mdef\u001b[39;00m \u001b[39mdownload\u001b[39m(url, filename):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/genar/OneDrive/maestria/ciencia%20de%20datos/actividades-de-aprendizaje-A01150931/DA0101EN-Review-Introduction.jupyterlite.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     response \u001b[39m=\u001b[39m \u001b[39mawait\u001b[39;00m pyfetch(url)\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyodide'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#This function will download the dataset into your browser \n",
         "\n",
-        "from pyodide.http import pyfetch\n",
+        "#from pyodide.http import pyfetch\n",
         "\n",
         "async def download(url, filename):\n",
         "    response = await pyfetch(url)\n",
@@ -174,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -190,25 +166,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 25,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'download' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32mc:\\Users\\genar\\OneDrive\\maestria\\ciencia de datos\\actividades-de-aprendizaje-A01150931\\DA0101EN-Review-Introduction.jupyterlite.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/genar/OneDrive/maestria/ciencia%20de%20datos/actividades-de-aprendizaje-A01150931/DA0101EN-Review-Introduction.jupyterlite.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#you will need to download the dataset; if you are running locally, please comment out the following \u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/genar/OneDrive/maestria/ciencia%20de%20datos/actividades-de-aprendizaje-A01150931/DA0101EN-Review-Introduction.jupyterlite.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mawait\u001b[39;00m download(path, \u001b[39m\"\u001b[39m\u001b[39mauto.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/genar/OneDrive/maestria/ciencia%20de%20datos/actividades-de-aprendizaje-A01150931/DA0101EN-Review-Introduction.jupyterlite.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m path\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mauto.csv\u001b[39m\u001b[39m\"\u001b[39m\n",
-            "\u001b[1;31mNameError\u001b[0m: name 'download' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#you will need to download the dataset; if you are running locally, please comment out the following \n",
-        "await download(path, \"auto.csv\")\n",
-        "path=\"auto.csv\""
+        "#await download(path, \"auto.csv\")\n",
+        "#path=\"auto.csv\""
       ]
     },
     {
@@ -220,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -242,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -440,7 +404,7 @@
               "[5 rows x 26 columns]"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -463,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -784,7 +748,7 @@
               "[10 rows x 26 columns]"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -828,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
@@ -858,7 +822,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -1203,7 +1167,7 @@
               "[10 rows x 26 columns]"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1222,7 +1186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1238,7 +1202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -1863,7 +1827,7 @@
               "[20 rows x 26 columns]"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1892,7 +1856,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -1907,7 +1871,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2001,7 +1965,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
@@ -2036,7 +2000,7 @@
               "dtype: object"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2054,7 +2018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -2132,7 +2096,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -2299,7 +2263,7 @@
               "max    4066.000000   326.000000          23.000000   49.000000    54.000000  "
             ]
           },
-          "execution_count": 16,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2326,7 +2290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -2699,7 +2663,7 @@
               "[11 rows x 26 columns]"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2750,7 +2714,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -2835,7 +2799,7 @@
               "max    208.100000          23.000000"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2884,7 +2848,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
